add preselect's route, schema, swagger  and data process for preselect in server.py
